--- a/src/Jareds.ServiceProxy/Jareds.ServiceProxy.csproj
+++ b/src/Jareds.ServiceProxy/Jareds.ServiceProxy.csproj
@@ -5,10 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.5" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
     <PackageReference Include="System.Reflection.Emit" Version="4.7.0" />
     <PackageReference Include="Winner.Framework.Utils" Version="3.0.19" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Jareds.ServiceDiscovery\Jareds.ServiceModel.csproj" />
   </ItemGroup>
 
 </Project>
