--- a/src/Jareds.ServiceDiscovery/Jareds.ServiceModel.csproj
+++ b/src/Jareds.ServiceDiscovery/Jareds.ServiceModel.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Jason</Authors>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>Jareds.ServiceModel.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
