--- a/src/Jareds.ServiceModel/Jareds.ServiceModel.csproj
+++ b/src/Jareds.ServiceModel/Jareds.ServiceModel.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Jason</Authors>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Platform)'=='AnyCPU'">
